--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
 html {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(37, 37, 37);
+}
